--- a/selective_elective/administrator/templates/adashboard.html
+++ b/selective_elective/administrator/templates/adashboard.html
@@ -50,6 +50,11 @@
         text-align: center;
     }
 
+    p {
+        padding: 10px;
+        text-align: center;
+    }
+
     th {
         background-color: #007BFF;
         color: #fff;
@@ -94,6 +99,9 @@
                     <option value="{{e.E_id}}">{{e.name}}</option>
                 {% endfor %}
             </select>
+            {% if e1c %}
+            <p>Number of students is {{e1c.student_no__sum}}</p>
+            {% endif %}
             <table id="table1">
                 <thead>
                     <tr>
@@ -134,6 +142,9 @@
                     <option value="{{e.E_id}}">{{e.name}}</option>
                 {% endfor %}
             </select>
+            {% if e2c %}
+            <p>Number of students is {{e2c.student_no__sum}}</p>
+            {% endif %}
             <table id="table2">
                 <thead>
                     <tr>
@@ -174,12 +185,12 @@
     </div>
 </form>
 <hr/>
-<form method='POST' action="{% url 'administrator:naughty' %}">
+{% comment %} <form method='POST' action="{% url 'administrator:naughty' %}">
     {% csrf_token %}
     <div class="container cont">
         <button class="butt" type="submit" id="loginButton">Find Naughty Students</button>
     </div>
-</form>
+</form> {% endcomment %}
 
 <div class="container cont">
     <div class="table-container">
@@ -195,6 +206,26 @@
                     {% for student in naughty %}
                         <tr>
                             <td>{{student.first_name}} {{student.last_name}}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="table-container">
+        <!-- Table 1 -->
+        <div class="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Empty Classrooms</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for room in empty %}
+                        <tr>
+                            <td>{{room}}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
